kustomizations/journal-cms/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journal-cms-app
  namespace: journal
spec:
  replicas: ${replicas:-1}
  template:
    spec:
      serviceAccountName: journal-cms
      containers:
      - name: journal-cms
        image: ghcr.io/elifesciences/journal-cms:latest
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /ping
            port: 8080
          periodSeconds: 5
          failureThreshold: 10
          timeoutSeconds: 10
        volumeMounts:
        - name: journal-cms-files
          mountPath: /opt/drupal/web/sites/default/files/
      volumes:
      - name: journal-cms-files
        persistentVolumeClaim:
          claimName: journal-cms-files
