kustomizations/journal-cms/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: journal-cms-web
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
